samples/_failures_safe/1761242836_edbfa2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75cc788a.c: In function ‘main’:
./samples/SAFE/__tmp_75cc788a.c:139:12: error: missing terminating " character
  139 |     printf("\nEnter search keyword (or press Enter to skip):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_75cc788a.c:139:5: error: expected expression at end of input
  139 |     printf("\nEnter search keyword (or press Enter to skip):
      |     ^~~~~~
./samples/SAFE/__tmp_75cc788a.c:139:5: error: expected declaration or statement at end of input
